fix alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -37,19 +37,24 @@ code {
 
 .heading {
   font-size: 2.4em;
-  padding-left: 20px ;
+  padding-left: 100px ;
   color: #384E77;
 }
 
 .heading-name {
   font-size: 2.5em;
-  padding-left: 20px ;
+  padding-left: 100px ;
   color: #18314F;
 }
 
 .heading-description  {
-  margin-left: 20px;
+  margin-left: 100px;
+  max-width: 400px;
+  float: left;
+  display: flex;
 }
+
+
 
 .main-name {
   color: #8BBEB2;
@@ -141,7 +146,9 @@ code {
   height: 300px;
   width: 300px;
   margin-top: 4%;
-  margin-left: 40%;
+  display: flex;
+
+
 }
 
 
